@@ -142,8 +142,19 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
     }
 
     @Override
-    protected void defineSynchedData(SynchedEntityData.Builder builder) {
-        super.defineSynchedData(builder);
+    //? if >=1.20.5 {
+protected void defineSynchedData(SynchedEntityData.Builder builder) {
+//?} else {
+/*protected void defineSynchedData() {
+        var builder = this.entityData;*/
+//?}
+
+        //? if >=1.20.5 {
+super.defineSynchedData(builder);
+//?} else {
+/*super.defineSynchedData();*/
+//?}
+
         builder.define(SHIELDED, false);
         builder.define(ATTACK_ID, 0);
         builder.define(PHASE_ID, Phase.DORMANT.ordinal());
@@ -157,7 +168,7 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
 
     public Attack attack() {
         if (!level().isClientSide()) return attack;
-        int index = Math.clamp(entityData.get(ATTACK_ID), 0, Attack.values().length - 1);
+        int index = net.krodark.asterion.port.compat.MathCompat.clamp(entityData.get(ATTACK_ID), 0, Attack.values().length - 1);
         return Attack.values()[index];
     }
 
@@ -166,7 +177,7 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
     }
 
     public Phase phase() {
-        int index = Math.clamp(entityData.get(PHASE_ID), 0, Phase.values().length - 1);
+        int index = net.krodark.asterion.port.compat.MathCompat.clamp(entityData.get(PHASE_ID), 0, Phase.values().length - 1);
         return Phase.values()[index];
     }
 
@@ -314,7 +325,7 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
         setPos(restingPosition);
         int age = ++phaseTicks;
         if (age >= 30 && age <= 66 && age % 3 == 0) {
-            float strength = Math.clamp((age - 30) / 24F, 0F, 1F);
+            float strength = net.krodark.asterion.port.compat.MathCompat.clamp((age - 30) / 24F, 0F, 1F);
             level.sendParticles(Asterion.GREEK_FIRE,
                     getX(), getY() + getBbHeight() * 0.62, getZ(),
                     2 + Math.round(strength * 6), 0.8, 0.35, 0.8,
@@ -340,7 +351,7 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
     }
 
     private void updateBossBar() {
-        bossBar.setProgress(Math.clamp(getHealth() / getMaxHealth(), 0, 1));
+        bossBar.setProgress(net.krodark.asterion.port.compat.MathCompat.clamp(getHealth() / getMaxHealth(), 0, 1));
         bossBar.setName(shielded()
                 ? Component.translatable("boss.asterion.cursed_brazier.shield", shieldBraziers.size())
                 : Component.translatable("entity.asterion.cursed_brazier"));
@@ -417,7 +428,7 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
 
     private void leaveCombat(ServerLevel level) {
         if (attack != Attack.NONE) finishAttack(30);
-         
+
         pressureHits = 0;
         pressureWindow = 0;
         retaliationQueued = false;
@@ -439,7 +450,7 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
 
         Map<Attack,Double> score=new java.util.EnumMap<>(Attack.class);
         score.put(Attack.FLOOR_JETS,2.2+movement*5.5+(distance>7&&distance<20?1.4:0)+closePlayers*.55+aggression);
-        score.put(Attack.FIRE_BEAM,sight?3.0+Math.clamp((distance-6)/4,0,3)+(1-Math.min(1,movement))*1.8+aggression*.7:-100.0);
+        score.put(Attack.FIRE_BEAM,sight?3.0+net.krodark.asterion.port.compat.MathCompat.clamp((distance-6)/4,0,3)+(1-Math.min(1,movement))*1.8+aggression*.7:-100.0);
         score.put(Attack.CARDINAL_DASH,clear>=3.5?2.8+Math.min(3,distance/5)+(sight?0:2.2)+aggression*2.2: -100.0);
         score.put(Attack.SPIN_TORNADO,spinRoom?2.0+Math.max(0,10-distance)*.55+closePlayers*1.15+aggression*2.8:-100.0);
 
@@ -495,7 +506,7 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
             if (burningRubble.size() >= 5) break;
             Vec3 start = floor.add(0, .65, 0);
             Vec3 delta = target.position().add(0, .7, 0).subtract(start);
-            double flight = Math.clamp(delta.horizontalDistance() / .65, 12, 28);
+            double flight = net.krodark.asterion.port.compat.MathCompat.clamp(delta.horizontalDistance() / .65, 12, 28);
             Vec3 velocity = new Vec3(delta.x / flight, delta.y / flight + .0275 * flight, delta.z / flight);
             burningRubble.add(new BurningRubble(start, velocity, 0));
             net.krodark.asterion.worldgen.ArenaDebris.queue(level, start, velocity, .55F);
@@ -581,11 +592,11 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
 
     private void tickSpinTornado(ServerLevel level, ServerPlayer target) {
         int tick = ++attackTicks;
-         
-         
+
+
         double targetHeight = target.getY();
         if (tick <= 45) {
-            Vec3 next = position().add(0, Math.clamp(targetHeight - getY(), -0.12, 0.12), 0);
+            Vec3 next = position().add(0, net.krodark.asterion.port.compat.MathCompat.clamp(targetHeight - getY(), -0.12, 0.12), 0);
             if (canOccupy(level, next)) setPos(next);
         } else if (tick == 46) {
             lockedPosition = position();
@@ -602,7 +613,7 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
             return;
         }
 
-        double progress = Math.clamp((tick - 70) / 68.0, 0, 1);
+        double progress = net.krodark.asterion.port.compat.MathCompat.clamp((tick - 70) / 68.0, 0, 1);
         double eased = progress * progress * (3.0 - 2.0 * progress);
         double speed = 2.0 + 14.0 * eased;
         setYRot((float) (getYRot() + speed));
@@ -643,8 +654,8 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
             damagePlayers(level, getBoundingBox().inflate(0.65, 0.3, 0.65),
                     scaledDamage(12.5F), 16, true);
         }
-         
-         
+
+
         if (dashLeg >= 7 && legTick >= DASH_MOVE_TICKS) finishAttack(4);
     }
 
@@ -729,8 +740,8 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
         Vec3 origin = snapToGrid(position());
         double currentDistance=Math.sqrt(horizontalDistanceSqr(origin,target.position()));
         boolean currentSight=hasLineOfSight(target);
-         
-         
+
+
         if(currentSight&&currentDistance>=6&&currentDistance<=14&&random.nextFloat()<.25F)return false;
         List<Vec3> candidates = new ArrayList<>();
         double restY=restingPosition==null?origin.y:restingPosition.y;
@@ -749,9 +760,9 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
         if (candidates.isEmpty()) return false;
         candidates.sort(Comparator.comparingDouble(candidate -> positionCost(level,candidate,target)));
         double currentCost=positionCost(level,origin,target);
-        if(positionCost(level,candidates.getFirst(),target)>currentCost-.65)return false;
+        if(positionCost(level,candidates.get(0),target)>currentCost-.65)return false;
         gridMoveStart = position();
-        gridMoveTarget = candidates.getFirst();
+        gridMoveTarget = candidates.get(0);
         gridMoveTicks = 1;
         gridMoveDuration = Math.abs(gridMoveTarget.y-gridMoveStart.y)>0.5?12:7;
         Vec3 travel = gridMoveTarget.subtract(gridMoveStart);
@@ -763,14 +774,14 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
     private void trackPlayerAltitude(ServerLevel level, ServerPlayer target, double maximumStep) {
         double difference = combatAltitude(target) - getY();
         if (Math.abs(difference) < 0.08) return;
-        Vec3 next = position().add(0, Math.clamp(difference, -maximumStep, maximumStep), 0);
+        Vec3 next = position().add(0, net.krodark.asterion.port.compat.MathCompat.clamp(difference, -maximumStep, maximumStep), 0);
         if (canOccupy(level, next)) setPos(next);
     }
 
     private double combatAltitude(ServerPlayer target) {
         double restY = restingPosition == null ? getY() : restingPosition.y;
         double eyeAligned = target.getEyeY() - getBbHeight() * 0.55;
-        return Math.rint(Math.clamp(eyeAligned, restY - 10, restY + 10));
+        return Math.rint(net.krodark.asterion.port.compat.MathCompat.clamp(eyeAligned, restY - 10, restY + 10));
     }
 
     private double positionCost(ServerLevel level,Vec3 candidate,ServerPlayer target) {
@@ -778,8 +789,8 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
         double cost=Math.abs(distance-10.0);
         double horizontalTravel=Math.sqrt(horizontalDistanceSqr(candidate,position()));
         double verticalTravel=Math.abs(candidate.y-position().y);
-         
-         
+
+
         cost+=horizontalTravel*1.15;
         if(verticalTravel>0.5)cost-=2.4+Math.min(1.4,verticalTravel*.22);
         double desiredY=target.getY()+target.getBbHeight()*.55;
@@ -795,7 +806,7 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
     }
 
     private void tickGridStep() {
-        float progress = Math.clamp(gridMoveTicks++ / (float) gridMoveDuration, 0F, 1F);
+        float progress = net.krodark.asterion.port.compat.MathCompat.clamp(gridMoveTicks++ / (float) gridMoveDuration, 0F, 1F);
         float eased = progress * progress * (3F - 2F * progress);
         setPos(gridMoveStart.lerp(gridMoveTarget, eased));
         if (progress < 1F) return;
@@ -955,7 +966,7 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
 
     private float aggression() {
         float missingHealth = 1F - getHealth() / Math.max(1F, getMaxHealth());
-        return Math.clamp(missingHealth * 0.72F + fury / 100F * 0.28F, 0F, 1F);
+        return net.krodark.asterion.port.compat.MathCompat.clamp(missingHealth * 0.72F + fury / 100F * 0.28F, 0F, 1F);
     }
 
     private float scaledDamage(float baseDamage) {
@@ -969,7 +980,7 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
 
     private void updateFacing() {
         float difference = net.minecraft.util.Mth.wrapDegrees(desiredYaw - getYRot());
-        setYRot(getYRot() + Math.clamp(difference, -7.5F, 7.5F));
+        setYRot(getYRot() + net.krodark.asterion.port.compat.MathCompat.clamp(difference, -7.5F, 7.5F));
         yBodyRot = getYRot();
         yHeadRot = getYRot();
     }
@@ -1056,7 +1067,7 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
         super.die(source);
     }
 
-     
+
     public void resetAfterPlayerDeath(ServerLevel level) {
         for (UUID id : encounterParticipants) {
             net.krodark.asterion.game.EncounterKeyRecovery.refundAttemptKey(level, id,
@@ -1112,8 +1123,21 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
     }
 
     @Override
-    protected void dropCustomDeathLoot(ServerLevel level, DamageSource source, boolean killedByPlayer) {
-        super.dropCustomDeathLoot(level, source, killedByPlayer);
+
+//? if >=1.20.5 {
+protected void dropCustomDeathLoot(ServerLevel level, DamageSource source, boolean killedByPlayer) {
+//?} else {
+/*protected void dropCustomDeathLoot(DamageSource source, int looting, boolean killedByPlayer) {
+ var level = (net.minecraft.server.level.ServerLevel)level();*/
+//?}
+
+
+//? if >=1.20.5 {
+super.dropCustomDeathLoot(level, source, killedByPlayer);
+//?} else {
+/*super.dropCustomDeathLoot(source, looting, killedByPlayer);*/
+//?}
+
         spawnAtLocation(new ItemStack(GameplayContent.CURSED_BRAZIER_KEY));
         var keyMold=spawnAtLocation(new ItemStack(Asterion.MINOTAUR_KEY_CAST));
         net.krodark.asterion.game.EncounterKeyRecovery.track(level,keyMold,
@@ -1138,7 +1162,7 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
     @Override
     public void readAdditionalSaveData(CompoundTag input) {
         super.readAdditionalSaveData(input);
-        int phaseIndex = Math.clamp(net.krodark.asterion.port.compat.NbtCompat.getInt(input, "BrazierPhase", Phase.DORMANT.ordinal()),
+        int phaseIndex = net.krodark.asterion.port.compat.MathCompat.clamp(net.krodark.asterion.port.compat.NbtCompat.getInt(input, "BrazierPhase", Phase.DORMANT.ordinal()),
                 0, Phase.values().length - 1);
         Phase restored = Phase.values()[phaseIndex];
         entityData.set(PHASE_ID, restored.ordinal());
@@ -1151,7 +1175,7 @@ public final class CursedBrazierEntity extends PathfinderMob implements GeoEntit
         middleShieldUsed = net.krodark.asterion.port.compat.NbtCompat.getBoolean(input, "MiddleShieldUsed", false);
         finalShieldUsed = net.krodark.asterion.port.compat.NbtCompat.getBoolean(input, "FinalShieldUsed", false);
         initialShieldUsed = net.krodark.asterion.port.compat.NbtCompat.getBoolean(input, "InitialShieldUsed", false);
-        fury = Math.clamp(net.krodark.asterion.port.compat.NbtCompat.getFloat(input, "BrazierFury", 0F), 0F, 100F);
+        fury = net.krodark.asterion.port.compat.MathCompat.clamp(net.krodark.asterion.port.compat.NbtCompat.getFloat(input, "BrazierFury", 0F), 0F, 100F);
         setInvulnerable(restored != Phase.ACTIVE);
     }
 
