@@ -8,7 +8,7 @@ import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.chunk.ChunkAccess;
 import java.util.List;
 
- 
+
 public final class CatacombLayout {
     public static final int TILE = 19;
     public static final int FLOOR_Y = LabyrinthLevels.CATACOMB_BASE_Y + 3;
@@ -20,9 +20,9 @@ public final class CatacombLayout {
     public static final int BRAZIER_ROOM_MIN_X = 10, BRAZIER_ROOM_MAX_X = 12;
     public static final int BRAZIER_ROOM_MIN_Z = 4, BRAZIER_ROOM_MAX_Z = 6;
     public static final int BRAZIER_APPROACH_Z = 5;
-     
+
     public static final List<Integer> BRAZIER_ROOM_MIN_ZS = List.of(4, 10, 16);
-     
+
     public static final int BRAZIER_APPROACH_CROSSING_X = 7;
 
     private CatacombLayout() { }
@@ -59,8 +59,8 @@ public final class CatacombLayout {
                 roofAt(pos.getX(), pos.getZ()));
     }
 
-     
-     
+
+
     private static final int SPACING = 3;
     public static long hash(long seed, int x, int z) {
         long h = seed ^ x * 0x632BE59BD9B4E019L ^ z * 0x9E3779B97F4A7C15L;
@@ -89,18 +89,18 @@ public final class CatacombLayout {
         }
         return null;
     }
-     
+
     public static Direction parent(long seed, int x, int z) {
         if (reserved(x,z) || x==ROOT_X && z==ROOT_Z) return null;
-         
-         
+
+
         if (z == ROOT_Z && x >= 0 && x < ROOT_X) return Direction.EAST;
-         
-        int finalApproach = BRAZIER_ROOM_MIN_ZS.getLast() + 1;
+
+        int finalApproach = BRAZIER_ROOM_MIN_ZS.get(BRAZIER_ROOM_MIN_ZS.size() - 1) + 1;
         if (x == ROOT_X && z > ROOT_Z && z <= finalApproach) return Direction.NORTH;
         if (brazierApproach(z) && x > ROOT_X && x < BRAZIER_ROOM_MIN_X) return Direction.WEST;
-         
-         
+
+
         for (int minZ : BRAZIER_ROOM_MIN_ZS) {
             int approachZ = minZ + 1, maxZ = minZ + 2;
             if (x == BRAZIER_ROOM_MAX_X + 1 && z >= minZ && z <= maxZ)
@@ -110,12 +110,12 @@ public final class CatacombLayout {
         }
         Direction spine=backboneParent(seed,x,z);
         if (spine!=null) return spine;
-         
+
         if (ForgeDepths.isStairModule(x, z)) return Direction.EAST;
         if (Math.floorMod(x-ROOT_X,SPACING)==0 || Math.floorMod(z-ROOT_Z,SPACING)==0) return null;
         long roll=hash(seed ^ 0xD1B54A32D192ED03L,x,z);
         if (Math.floorMod(roll,6)!=0) return null;
-         
+
         Direction[] sides={Direction.NORTH,Direction.EAST,Direction.SOUTH,Direction.WEST};
         int start=(int)((roll>>>8)&3);
         for(int i=0;i<4;i++) {
@@ -142,16 +142,16 @@ public final class CatacombLayout {
         return wovenConnection(seed, tx, tz, side);
     }
 
-     
+
     public static boolean wovenConnection(long seed, int tx, int tz, Direction side) {
         if (!side.getAxis().isHorizontal()) return false;
         int nx = tx + side.getStepX(), nz = tz + side.getStepZ();
         if (reserved(tx, tz) || reserved(nx, nz) || brazierRoom(tx, tz) || brazierRoom(nx, nz)
                 || !occupied(seed, tx, tz) || !occupied(seed, nx, nz)) return false;
         if (parent(seed, tx, tz) == side || parent(seed, nx, nz) == side.getOpposite()) return false;
-         
-         
-         
+
+
+
         if (backboneParent(seed, tx, tz) != null && backboneParent(seed, nx, nz) != null)
             return false;
         int edgeX = Math.min(tx, nx), edgeZ = Math.min(tz, nz);
